Fix contrast for bg-green CSS class
Pass WCAG contrast ratio checks

--- a/nethserver-manager/css/base.css
+++ b/nethserver-manager/css/base.css
@@ -333,7 +333,7 @@ div.dashboard-item {
 .notification.bg-red {color: #fff; background-color: #C42200; border-color: #C42200}
 .notification.bg-red a {color: #fff}
 
-.notification.bg-green {color: #fff; background-color: #00B543; border-color: #00B543 }
+.notification.bg-green {color: #fff; background-color: #00551F; border-color: #00551F }
 .notification.bg-green a {color: #fff}
 
 .notification.bg-yellow {color: #000; background-color: #FFB600; border-color: #FFB600 }
